# bmstu_cpp_course

./: .clang-format  .clang-tidy  .gdbinit  .gdbinit_home  .gitignore  .gitmodules  .lldbinit  CMakeLists.txt  README.md  bmstu_list_printer_gdb.py  bmstu_list_printer_lldb.py  bmstu_list_printer_msvc.natvis  describe.txt  docker-compose.yml  docker_compose.txt  gdb_printer.py  homework.c  lldb_printer.py  transform.xsl
.github/: describe.txt
.github/workflows/: ci-cpp-build.yml  ci-cpp-stylecheck.yml  ci.yml  docker-build.yml
docker/image/: Dockerfile  install_deps.sh
docker/run_tasks/: run.sh  run_style_check.sh
docs/: ide.md
tasks/: CMakeLists.txt  c_string  note.txt  transform.xsl  спасательный круг.txt
tasks/.github/workflows/: ci-cpp-stylecheck.yml
tasks/bmstu_abstract_iterator/: CMakeLists.txt
tasks/bmstu_abstract_iterator/task_abstract_iterator/: abstract_iterator.h  abstract_iterator_tests.cpp
tasks/bmstu_lets/: CMakeLists.txt
tasks/bmstu_lets/task_let_1_2/: base_algo_let.cpp  base_algo_let.h  base_algo_let_tests.cpp
tasks/bmstu_lets/task_let_2_2/: base_node_let.h  base_node_let_tests.cpp
tasks/bmstu_list/: CMakeLists.txt
tasks/bmstu_list/task_list/: bmstu_list.h  bmstu_list2.natvis  bmstu_list_printer_msvc.natvis  bmstu_list_test.cpp
tasks/bmstu_list/task_list/tasks/bmstu_list/: bmstu_list2.natvis
tasks/bmstu_map/: CMakeLists.txt
tasks/bmstu_map/task_map/: bmstu_map.h  bmstu_map_test.cpp
tasks/bmstu_optional/: CmakeLists.txt  bmstu_optional.h  bmstu_optional_tests.cpp
tasks/bmstu_optional/task_optional/: bmstu_optional.h  bmstu_optional_test.cpp
tasks/bmstu_simple_vector/: CMakeLists.txt
tasks/bmstu_simple_vector/task_simple_vector/: array_ptr.h  bmstu_simple_vector.h  bmstu_simple_vector.natvis  simple_vector_gdb.py  simple_vector_test.cpp
tasks/bmstu_stack/: CMakeLists.txt
tasks/bmstu_stack/task_simple_stack/: bmstu_stack.h  simple_stack  simple_stack_test.cpp
tasks/bmstu_string/: CMakeLists.txt
tasks/bmstu_string/task_simple_string/: bmstu_string.h  bmstu_string.natvis  dz222  dz222.cpp  simple_cstr_test.cpp  simple_test
tasks/bmstu_string/task_sso_string/: bmstu_sso_string.h  sso_string_test.cpp  sso_test
tasks/bmstu_unordered_map/: CMakeLists.txt
tasks/bmstu_unordered_map/task_unordered_map/: bmstu_unordered_map.h  bmstu_unordered_map_test.cpp
tasks/task_basic_c/: CMakeLists.txt  Mobile_phones.cpp  testtest  testtest.cpp
tasks/task_basic_c/HW2/: hw2_4  hw2_4.cpp  hw2_6  hw2_6.cpp  hw333  hw333.cpp  hw_2new  hw_2new.cpp  hw_444  hw_444.cpp
tasks/task_basic_c/KR/: q01  q01.cpp  q014test.txt  q02  q02.cpp  q03  q03.cpp  q04  q04.cpp  q05  q05.cpp  q06  q06.cpp  q07  q07.cpp  q08  q08.cpp  q09  q09.cpp  q10  q10.cpp  q11  q11.cpp  q12  q12.cpp  q13  q13.cpp  q14  q14.cpp  q15  q15.cpp  q16  q16.cpp  q17_1  q17_1.cpp  q18  q18.cpp  q19  q19.cpp  q20  (+1 more)
tasks/task_basic_c/control zachet/: q11  q11.cpp
tasks/task_basic_c/fibanachi/: fib1.cpp
tasks/task_basic_c/students/: Students.cpp
tasks/task_basic_c/task_hello/: hello  hello.c
tasks/task_basic_c/task_int2str/: int2str  int2str.c  int2str.cpp  int2str.h  int2str_tests.cpp
tasks/task_basic_c/task_let_1_2/: base_algo_let.h  base_algo_tests.cpp  not_base  not_base.cpp
tasks/task_basic_c/task_str2int/: str2int  str2int.c  str2int.cpp  str2int.h  str2int_tests.cpp
tasks/tasks/: CMakeLists.txt
tasks/tasks/bmstu_lets/task_let_1_2/: base_algo_let.cpp  base_algo_let_tests.cpp
tasks/tasks/bmstu_lets/task_let_2_2/: base_node_let_tests.cpp
tasks/tasks/bmstu_map/task_map/: bmstu_map.h
tasks/tasks/bmstu_simple_vector/: CMakeLists.txt
tasks/tasks/bmstu_simple_vector/task_simple_vector/: bmstu_simple_vector.h  simple_vector_test.cpp
tasks/tasks/bmstu_string/task_sso_string/: bmstu_sso_string.natvis
tasks/tasks/task_basic_c/task_int2str/: int2str.c
tasks/tasks/task_basic_c/task_str2int/: str2int.h
