# add_subdirectory(task_basic_c)
# add_subdirectory(bmstu_string)
# add_subdirectory(bmstu_lets)
add_subdirectory(bmstu_stack)
# add_subdirectory(bmstu_simple_vector)
# add_subdirectory(bmstu_abstract_iterator)
# add_subdirectory(bmstu_list)
# add_subdirectory(bmstu_optional)
# add_subdirectory(bmstu_map)